// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customizeManifest release builds beta 1`] = `
{
  "action": {
    "default_icon": {
      "128": "icons/inactive/logo128.png",
      "16": "icons/inactive/logo16.png",
      "32": "icons/inactive/logo32.png",
      "48": "icons/inactive/logo48.png",
    },
    "default_title": "PixieBrix",
  },
  "author": "PixieBrix, Inc.",
  "background": {
    "service_worker": "background.worker.js",
    "type": "module",
  },
  "commands": {
    "toggle-quick-bar": {
      "description": "Toggle Quick Bar",
      "suggested_key": {
        "default": "Ctrl+M",
        "mac": "Command+M",
      },
    },
  },
  "content_scripts": [
    {
      "all_frames": true,
      "css": [
        "contentScript.css",
      ],
      "exclude_matches": [
        "https://*.googleapis.com/*",
      ],
      "js": [
        "contentScript.js",
      ],
      "match_about_blank": true,
      "matches": [
        "*://*/*",
      ],
      "run_at": "document_idle",
    },
    {
      "js": [
        "loadActivationEnhancements.js",
      ],
      "matches": [
        "https://*/*",
      ],
      "run_at": "document_end",
    },
    {
      "js": [
        "setExtensionIdInApp.js",
      ],
      "matches": [
        "https://*.pixiebrix.com/*",
      ],
      "run_at": "document_end",
    },
  ],
  "content_security_policy": {
    "extension_pages": "script-src 'self'; font-src 'self' https://fonts.gstatic.com; connect-src 'self' http: https: wss:; object-src 'self'; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https:; frame-src 'self' http: https:;",
    "sandbox": "sandbox allow-scripts allow-forms; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self';",
  },
  "description": "Customize, extend, and integrate your favorite SaaS apps without writing a line of code!",
  "devtools_page": "devtools.html",
  "externally_connectable": {
    "matches": [
      "https://*.pixiebrix.com/*",
    ],
  },
  "homepage_url": "https://www.pixiebrix.com",
  "host_permissions": [
    "<all_urls>",
  ],
  "icons": {
    "128": "icons/beta/logo128.png",
    "16": "icons/beta/logo16.png",
    "32": "icons/beta/logo32.png",
    "48": "icons/beta/logo48.png",
  },
  "manifest_version": 3,
  "minimum_chrome_version": "123.0",
  "name": "PixieBrix BETA",
  "optional_permissions": [
    "clipboardWrite",
  ],
  "options_ui": {
    "open_in_tab": true,
    "page": "options.html",
  },
  "permissions": [
    "activeTab",
    "storage",
    "identity",
    "tabs",
    "tabCapture",
    "webNavigation",
    "contextMenus",
    "alarms",
    "devtools",
    "scripting",
    "offscreen",
    "sidePanel",
  ],
  "sandbox": {
    "pages": [
      "sandbox.html",
    ],
  },
  "short_name": "PixieBrix BETA",
  "side_panel": {
    "default_path": "sidebar.html",
  },
  "storage": {
    "managed_schema": "managedStorageSchema.json",
  },
  "version": "1.8.13.3000",
  "version_name": "1.8.13",
  "web_accessible_resources": [
    {
      "matches": [
        "*://*/*",
      ],
      "resources": [
        "css/*",
        "bundles/*",
        "sandbox.html",
        "frame.html",
        "sidebar.html",
        "pageScript.js",
        "ephemeralForm.html",
        "walkthroughModal.html",
        "ephemeralPanel.html",
        "audio/*",
        "user-icons/*",
        "img/*",
        "*.css",
      ],
    },
  ],
}
`;

exports[`customizeManifest release builds stable 1`] = `
{
  "action": {
    "default_icon": {
      "128": "icons/inactive/logo128.png",
      "16": "icons/inactive/logo16.png",
      "32": "icons/inactive/logo32.png",
      "48": "icons/inactive/logo48.png",
    },
    "default_title": "PixieBrix",
  },
  "author": "PixieBrix, Inc.",
  "background": {
    "service_worker": "background.worker.js",
    "type": "module",
  },
  "commands": {
    "toggle-quick-bar": {
      "description": "Toggle Quick Bar",
      "suggested_key": {
        "default": "Ctrl+M",
        "mac": "Command+M",
      },
    },
  },
  "content_scripts": [
    {
      "all_frames": true,
      "css": [
        "contentScript.css",
      ],
      "exclude_matches": [
        "https://*.googleapis.com/*",
      ],
      "js": [
        "contentScript.js",
      ],
      "match_about_blank": true,
      "matches": [
        "*://*/*",
      ],
      "run_at": "document_idle",
    },
    {
      "js": [
        "loadActivationEnhancements.js",
      ],
      "matches": [
        "https://*/*",
      ],
      "run_at": "document_end",
    },
    {
      "js": [
        "setExtensionIdInApp.js",
      ],
      "matches": [
        "https://*.pixiebrix.com/*",
      ],
      "run_at": "document_end",
    },
  ],
  "content_security_policy": {
    "extension_pages": "script-src 'self'; font-src 'self' https://fonts.gstatic.com; connect-src 'self' http: https: wss:; object-src 'self'; img-src 'self' data: https:; style-src 'self' 'unsafe-inline' https:; frame-src 'self' http: https:;",
    "sandbox": "sandbox allow-scripts allow-forms; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self';",
  },
  "description": "Customize, extend, and integrate your favorite SaaS apps without writing a line of code!",
  "devtools_page": "devtools.html",
  "externally_connectable": {
    "matches": [
      "https://*.pixiebrix.com/*",
    ],
  },
  "homepage_url": "https://www.pixiebrix.com",
  "host_permissions": [
    "<all_urls>",
  ],
  "icons": {
    "128": "icons/logo128.png",
    "16": "icons/logo16.png",
    "32": "icons/logo32.png",
    "48": "icons/logo48.png",
  },
  "manifest_version": 3,
  "minimum_chrome_version": "123.0",
  "name": "PixieBrix",
  "optional_permissions": [
    "clipboardWrite",
  ],
  "options_ui": {
    "open_in_tab": true,
    "page": "options.html",
  },
  "permissions": [
    "activeTab",
    "storage",
    "identity",
    "tabs",
    "tabCapture",
    "webNavigation",
    "contextMenus",
    "alarms",
    "devtools",
    "scripting",
    "offscreen",
    "sidePanel",
  ],
  "sandbox": {
    "pages": [
      "sandbox.html",
    ],
  },
  "short_name": "PixieBrix",
  "side_panel": {
    "default_path": "sidebar.html",
  },
  "storage": {
    "managed_schema": "managedStorageSchema.json",
  },
  "version": "1.8.13.3000",
  "version_name": "1.8.13",
  "web_accessible_resources": [
    {
      "matches": [
        "*://*/*",
      ],
      "resources": [
        "css/*",
        "bundles/*",
        "sandbox.html",
        "frame.html",
        "sidebar.html",
        "pageScript.js",
        "ephemeralForm.html",
        "walkthroughModal.html",
        "ephemeralPanel.html",
        "audio/*",
        "user-icons/*",
        "img/*",
        "*.css",
      ],
    },
  ],
}
`;
